# gemini-acp

./: README.md  pyproject.toml
.beads/plans/: active-plan.md
gemini_acp/: __init__.py  client.py
gemini_acp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_gemini_acp.py
