[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-acp"
version = "0.1.0"
description = "Gemini CLI client via Agent Client Protocol (ACP)"
requires-python = ">=3.11"
dependencies = ["loguru"]

[project.optional-dependencies]
acp = ["agent-client-protocol>=0.9.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
